--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "YOURNAME Data Analysis Portfolio"
+  title: "Sean O'Sullivan's Data Portfolio"
   navbar:
     left:
       - text: "About Me"
@@ -20,11 +20,11 @@ website:
             file: tidytuesday-exercise/tidytuesday-exercise.qmd
     right:
       - icon: github 
-        href: URL-TO-THIS-REPOSITORY-HERE        
+        href: https://github.com/seventeencents/seanosullivan-P2-portfolio        
 
 format:
   html:
-    theme: cosmo
+    theme: lux
     highlight: zenburn
     css: styles.css
     toc: FALSE
