--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
             file: presentation-exercise/presentation-exercise.qmd
           - text: "Tidy Tuesday Exercise"
             file: tidytuesday-exercise/tidytuesday-exercise.qmd
+          - text: "Complex Data Exercise"
+            file: data-exercise/CopyOfcoding-exercise.qmd
     right:
       - icon: github 
         href: https://github.com/seventeencents/seanosullivan-P2-portfolio        
